feat: Enhance SEO and branding with meta tags and updated title
This commit introduces comprehensive meta tags to `index.html` for improved SEO and social media presence. It also updates the application title and header text to "TribeCode AI" for consistent branding. The robots.txt file has been updated to allow all users and specify the sitemap.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TribeCode AI</title>
+    <title>TribeCode AI | Voice-First AI Software Development & 3D Prototyping</title>
+    <meta name="description" content="TribeCode AI is a conversational, voice-first platform for building software with your AI tribe. Forge interactive roadmaps and cinematic 3D prototypes through natural dialogue." />
+    <meta name="keywords" content="AI coding, voice-first development, 3D prototyping, software blueprinting, TribeCode, Gemini AI, generative software" />
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TribeCode AI | Voice-First AI Software Forge" />
+    <meta property="og:description" content="Build your vision at the speed of thought. Conversational software architect for your next big idea." />
+    
+    <!-- Favicons -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏕️</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏕️</text></svg>">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script>
